--- a/ng-app/src/app/students/saimai/saimai.component.html
+++ b/ng-app/src/app/students/saimai/saimai.component.html
@@ -1,6 +1,6 @@
 <div>
-  <form class="form-horizontal ">
-    <div class="form-group">
+  <form class="form-horizontal " name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+    <div class="form-group" [ngClass] = "{'has-error':f.submitted && !username.valid}">
       <label class="col-sm-2 control-label">Student id : </label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="studentId" placeholder="Student id" [(ngModel)]="student.studentId"
@@ -54,6 +54,17 @@
                #password="ngModel" required/>
         <span *ngIf="f.submitted && !password.valid" class="help-block">
 Password is required</span>
+      </div>
+    </div>
+
+    <div class="form-group" [ngClass]="{'has-error': f.submitted && !user.role}">
+      <label class="col-sm-2 control-label" for="role">Role:&nbsp; </label>
+      <div class="col-sm-4">
+        <ng-select [allowClear]="true"
+                   [items]="roles"
+                   (data)="refreshValue($event)"
+                   placeholder="Select role">
+        </ng-select>
       </div>
     </div>
     <div class="form-group">
